feat: 推荐周边地点替换搜索；支持地图中心选点；推荐优先40m内

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="map-section">
                 <div id="mapContainer" class="map-container"></div>
                 <div class="map-controls">
-                    <button id="searchNearby" class="btn btn-primary">搜索周边服务</button>
+                    <button id="searchNearby" class="btn btn-primary">推荐周边地点</button>
                     <button id="getCurrentLocation" class="btn btn-secondary">重新定位</button>
                 </div>
             </div>
@@ -37,6 +37,7 @@
                     <div id="selectedLocation" class="selected-location">
                         <p>请先选择一个地点</p>
                     </div>
+                    <button id="useMapCenterBtn" class="btn btn-secondary" style="margin-bottom:10px">使用地图中心作为地点</button>
                     <button id="checkinBtn" class="btn btn-checkin" disabled>打卡</button>
                     <div id="checkinResult" class="checkin-result"></div>
 
