fix: 加载高德插件并增强推荐逻辑，修复推荐周边失败

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>地图打卡系统</title>
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=d0e3595b6918ec62dd0b0c4218bd47b7"></script>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=d0e3595b6918ec62dd0b0c4218bd47b7&plugin=AMap.PlaceSearch,AMap.Geocoder"></script>
 </head>
 <body>
     <div class="container">
